[package]
name = "dmerg"
version = "0.1.0"
authors = ["Carles Pey <carles.pey@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ctrlc = { version = "3.0", features = ["termination"] }
anyhow = "1.0"
chrono = "0.2"
rand = "0.8.4"
